force-app/main/default/objects/LoanRequest__c/LoanRequest__c.object-meta.xml
<CustomObject>
    <label>LoanRequest</label>
    <nameField>
        <label>LoanRequest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LoanRequests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>