force-app/main/default/objects/LoanRequest__c/fields/AnnualInterestRate__c.field-meta.xml
<CustomField>
    <fullName>AnnualInterestRate__c</fullName>
    <inlineHelpText>Tasso di interesse annuo applicato.</inlineHelpText>
    <label>AnnualInterestRate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>