force-app/main/default/objects/LoanRequest__c/fields/MonthlyInstallment__c.field-meta.xml
<CustomField>
    <fullName>MonthlyInstallment__c</fullName>
    <formula>IF(
 AnnualInterestRate__c = 0,
 Amount__c / RequestedTermMonths__c,
 Amount__c * (
   ( (AnnualInterestRate__c / 12) * 
     (1 + (AnnualInterestRate__c / 12)) ^ RequestedTermMonths__c
   ) / 
   ( (1 + (AnnualInterestRate__c / 12)) ^ RequestedTermMonths__c - 1 )
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calcolo automatico della rata mensile.</inlineHelpText>
    <label>MonthlyInstallment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>