force-app/main/default/objects/LoanRequest__c/fields/RequestedTermMonths__c.field-meta.xml
<CustomField>
    <fullName>RequestedTermMonths__c</fullName>
    <inlineHelpText>Durata del prestito espressa in mesi.</inlineHelpText>
    <label>RequestedTermMonths</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>