force-app/main/default/objects/LoanRequest__c/validationRules/RightAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>RightAmount</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>L&apos; importo richiesto per il prestito non puó essere minore o uguale a zero</errorMessage>
</ValidationRule>